--- a/tests.html
+++ b/tests.html
@@ -4,6 +4,7 @@
   <title>Jasmine Spec Runner</title>
 
   <link rel="stylesheet" type="text/css" href="css/jasmine.css">
+  <script type="text/javascript" src="js/libs/jquery-1.7.2.min.js"></script>
   <script type="text/javascript" src="js/libs/underscore.js"></script>
   <script type="text/javascript" src="js/libs/jasmine.js"></script>
   <script type="text/javascript" src="js/libs/jasmine-html.js"></script>
